Fixes layout bug related to 2dd313c4.
Turns out that was there for a reason. So now it’s documented.

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -90,9 +90,9 @@
   }
 }
 
-/*[role="main"]{
-	position: relative;  // I don't think this is necessary.
-}*/
+[role="main"]{
+	position: relative;  // Necessary to keep the left-nav contained on the homepage.
+}
 
 [role="navigation"],
 [role="main"]{
